[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sprinklrclient"
version = "0.21.5.17.6"
description = "A Python client for using the Sprinklr API"
authors = ["Steven Dzilvelis", "Forked by: Sunny To"]
license = "GPL-3.0-or-later"
packages = [
    { include = "SprinklrClient.py", from = "." }
]

[tool.poetry.dependencies]
python = "^3.8"